# cpputest_script

./: NewCClass  NewClass  NewFunction  README.md
template/CClass/: CClass.c  CClass.h  CClassTest.cpp
template/Class/: ClassTest.cpp
template/Function/: Function.c  Function.h  FunctionTest.cpp
template/project/: .vimrc_local  CMakeLists.txt
template/project/ext/: CMakeLists.txt
template/project/src/: CMakeLists.txt
template/project/test/: CMakeLists.txt  ProjectNameTest.cpp
